# plc-tcpip-bridge

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yaml  publish.yml
examples/: example_client.py  example_hmi.py  example_server.py  simple_hmi_gui.py
plc_tcpip_bridge/: __init__.py  client.py  dataframe.py  server.py  utils.py
test/: test_client.py  test_dataframe.py  test_server.py  test_utils.py
